# grid-resampler

./: CMakeLists.txt  README.md
data/: readme.md
data/nc22_OST50GRID_20230518/: Metadata_NC22.xml  NC22.asc  NC22.gml
file-raster-io/include/: file_raster_io.h
file-raster-io/src/: file_raster_io.cpp
include/: appconfig.h.in  appmanager.h  get_time_now.h  preambler.h
src/: appmanager.cxx  main.cxx  preambler.cxx
utils/include/: common_maths_and_geometry_ops.h
